# mlops

./: Makefile  pyproject.toml
.github/worklows/: ci.yml
src/data/: ingest.py
