[project]
name = "mlops-churn"
version = "0.1.0"
description = ""
authors = [
    {name = "Paulo",email = "30201880+phnascimento2@users.noreply.github.com."}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
python = "^3.10"
pandas = "^2.2"
scikit-learn = "^1.5"
xgboost = "^2.0"
lightgbm = "^4.0"
mlflow = "^2.14"
hydra-core = "^1.3"
fastapi = "^0.115"
uvicorn = "^0.30"
prefect = "^2.20"
feast = "^0.37"
dvc = "^3.50
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
black = "^24.0"
mypy = "^1.11"
flake8 = "^7.0"
isort = "^5.13"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
