[tool.poetry]
name = "mlops-churn"
version = "0.1.0"
description = "Customer churn prediction system with full MLOps pipeline"
authors = ["Paulo, <30201880+phnascimento2@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2"
scikit-learn = "^1.5"
xgboost = "^2.0"
lightgbm = "^4.0"
mlflow = "^2.14"
hydra-core = "^1.3"
fastapi = "^0.115"
uvicorn = "^0.30"
prefect = "^2.20"
feast = "^0.40"
dvc = "^3.50"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
black = "^24.0"
mypy = "^1.11"
flake8 = "^7.0"
isort = "^5.13"

